added proxy dynamically

--- a/lamp.yaml
+++ b/lamp.yaml
@@ -50,6 +50,9 @@ parameters:
   bootImage:
     type: string
     default: Ubuntu1604
+  proxy_ip:
+    type: string
+    default: 10.144.106.132:8678
 
 
 
@@ -116,32 +119,37 @@ resources:
         - device_name: vda
           volume_id: { get_resource: bootable_volume }
           delete_on_termination: True
+      user_data:
+       str_replace:
+        template: |
+          #!/bin/bash -v
+          sudo hostname localhost
+          echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
+          sudo -i
+          export http_proxy=$proxy
+          export https_proxy=$proxy
+          echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
+          echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
+          echo  > /etc/apt/sources.list
+          echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+          echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
+          echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+          echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+          echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+          echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
+          echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+          echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
+          apt-get update -y
+          debconf-set-selections <<< "mysql-server mysql-server/root_password password 'root'"
+          debconf-set-selections <<< "mysql-server mysql-server/root_password_again password 'root'"
+          export DEBIAN_FRONTEND="noninteractive"
+          apt-get install -y mysql-server
+          service mysql restart
+          apt-get install apache2 -y
+          apt-get install php libapache2-mod-php php-mcrypt php-mysql -y
+        params:
+            $proxy: { get_param: proxy_ip }
 
-
-      user_data: |
-        #!/bin/bash -v
-        sudo hostname localhost
-        echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
-        sudo -i
-        export http_proxy=http://10.157.240.254:8678
-        export https_proxy=http://10.157.240.254:8678
-        echo  > /etc/apt/sources.list
-        echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
-        apt-get update -y
-        debconf-set-selections <<< "mysql-server mysql-server/root_password password 'root'"
-        debconf-set-selections <<< "mysql-server mysql-server/root_password_again password 'root'"
-        export DEBIAN_FRONTEND="noninteractive"
-        apt-get install -y mysql-server
-        service mysql restart
-        apt-get install apache2 -y
-        apt-get install php libapache2-mod-php php-mcrypt php-mysql -y
   server_floating_ip:
     type: OS::Nova::FloatingIP
     properties:
