--- a/mean.yaml
+++ b/mean.yaml
@@ -52,6 +52,10 @@ parameters:
   bootImage:
     type: string
     default: Ubuntu1604
+  proxy_ip:
+    type: string
+    default: 10.144.106.132:8678
+
 
 
 
@@ -120,37 +124,43 @@ resources:
           delete_on_termination: True
 
 
-      user_data: |
-        #!/bin/bash -v
-        sudo hostname localhost
-        echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
-        sudo -i
-        export http_proxy=http://10.144.106.132:8678
-        export https_proxy=http://10.144.106.132:8678
-        echo  > /etc/apt/sources.list
-        echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
-        apt-get update -y
-        apt-get install git -y
-        apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
-        echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
-        apt-get install apt-transport-https
-        apt-get update -y
-        apt-get install -y mongodb-org
-        service mongod start
-        curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-        apt-get install -y nodejs
-        apt-get install -y build-essential
-        npm install -g bower
-        npm install -g gulp
-        npm install -g mean-cli
-        npm install -g yarn
+      user_data:
+        str_replace:
+          template: |
+            #!/bin/bash -v
+            sudo hostname localhost
+            echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
+            sudo -i
+            export http_proxy=$proxy
+            export https_proxy=$proxy
+            echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
+            echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
+            echo  > /etc/apt/sources.list
+            echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
+            apt-get update -y
+            apt-get install git -y
+            apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+            echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
+            apt-get install apt-transport-https
+            apt-get update -y
+            apt-get install -y mongodb-org
+            service mongod start
+            curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+            apt-get install -y nodejs
+            apt-get install -y build-essential
+            npm install -g bower
+            npm install -g gulp
+            npm install -g mean-cli
+            npm install -g yarn
+          params:
+            $proxy: { get_param: proxy_ip }
 
 
 
