--- a/lamp.yaml
+++ b/lamp.yaml
@@ -52,7 +52,7 @@ parameters:
     default: Ubuntu1604
   proxy_ip:
     type: string
-    default: 10.144.106.132:8678
+    default: http://10.144.106.132:8678
 
 
 
