--- a/none.yaml
+++ b/none.yaml
@@ -53,11 +53,10 @@ parameters:
     default: Ubuntu1604
   proxy_ip:
     type: string
-    default: http://10.144.106.132:8678  
-
-
-
-
+    default: http://10.157.240.254:8678
+  istelegrafon:
+    type: string
+    default: restart
 
 resources:
   security_group:
@@ -111,6 +110,7 @@ resources:
           delete_on_termination: True
 
 
+
       user_data:
         str_replace:
           template: |
@@ -118,25 +118,35 @@ resources:
             sudo hostname localhost
             echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
             sudo -i
+            rm /var/lib/apt/lists/lock
             export http_proxy=$proxy
             export https_proxy=$proxy
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo  > /etc/apt/sources.list
-            cat >/etc/apt/sources.list <<EOL
-            ###### Ubuntu Main Repos
-            deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
-            deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
-
-            ###### Ubuntu Update Repos
-            deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
-            deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse 
-            deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
-            deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse  
-            EOL
+                      
+            echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
             apt-get update -y
+            wget https://dl.influxdata.com/telegraf/releases/telegraf_1.10.0-1_amd64.deb
+            dpkg -i telegraf_1.10.0-1_amd64.deb
+            apt-get install jq -y
+            echo "serverid=$(sudo curl GET  -s 'http://169.254.169.254/openstack/latest/meta_data.json' |jq -r '.uuid' )" >> /etc/default/telegraf
+            mv /etc/telegraf/telegraf.conf /etc/telegraf/telegraf-orig.conf
+            wget -O /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/chetandev/statuscheck/master/telegraf.conf
+            wget -O /etc/telegraf/longrunning.sh https://raw.githubusercontent.com/chetandev/statuscheck/master/longrunning.sh
+            service telegraf $istelegrafon
+            
           params:
             $proxy: { get_param: proxy_ip }
+            $istelegrafon : { get_param: istelegrafon }
+
 
 
   server_floating_ip:
