--- a/mean.yaml
+++ b/mean.yaml
@@ -55,6 +55,9 @@ parameters:
   proxy_ip:
     type: string
     default: http://10.144.106.132:8678
+  istelegrafon:
+    type: string
+    default: restart
 
 
 
