--- a/none.yaml
+++ b/none.yaml
@@ -1,12 +1,11 @@
 heat_template_version: 2013-05-23
 description: >
-  creating lamp stack linux, apache mysql and php
+  Create a simple VM using Heat
 parameters:
   key:
     type: string
     description: >
-      Name of a KeyPair to enable SSH access to the instance. Note that the
-      default user is ec2-user.
+      Name of a KeyPair to enable SSH access to the instance.
     default: mykey
 
   flavor:
@@ -25,7 +24,7 @@ parameters:
 
   vmAvailabilityZone:
     type: string
-    default: JMNG-PE3-NONPROD  
+    default: JMNG-PE3-NONPROD
 
   internalNet:
     type: string
@@ -40,11 +39,11 @@ parameters:
   volumeName:
     type: string
     description: name of the bootable volume
-  
+
   serverName:
     type: string
     description: name of the instance
-  
+
   volumeSize:
     type: number
     default: 10
@@ -63,7 +62,7 @@ resources:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
-      rules: [ 
+      rules: [
              {"direction": ingress,
               "remote_ip_prefix": 0.0.0.0/0,
               "port_range_min": 22,
@@ -123,17 +122,35 @@ resources:
             export https_proxy=$proxy
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
-            echo  > /etc/apt/sources.list
-                      
-            echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
-            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
-            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
-            echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
-            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-            echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
-            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
-            echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
-            apt-get update -y
+
+            # Update sources.list based on bootImage
+            if [ $bootImage = "Ubuntu1604" ]
+            then
+              echo  > /etc/apt/sources.list
+              echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
+            elif [ $bootImage = "Ubuntu1804" ]
+            then
+              echo  > /etc/apt/sources.list
+              echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse"  >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ bionic-security main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb http://in.archive.ubuntu.com/ubuntu/ bionic-updates main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ bionic-security main restricted universe multiverse" >> /etc/apt/sources.list
+              echo "deb-src http://in.archive.ubuntu.com/ubuntu/ bionic-updates main restricted universe multiverse"  >> /etc/apt/sources.list
+            else
+              echo "sources.list was not updated based on bootImage"
+            fi
+
+            # Telegraf agent install
             wget https://dl.influxdata.com/telegraf/releases/telegraf_1.10.0-1_amd64.deb
             dpkg -i telegraf_1.10.0-1_amd64.deb
             apt-get install jq -y
@@ -142,12 +159,11 @@ resources:
             wget -O /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/Rahul-Aanand/statuscheck/prod/telegraf.conf
             wget -O /etc/telegraf/longrunning.sh https://raw.githubusercontent.com/Rahul-Aanand/statuscheck/prod/longrunning.sh
             service telegraf $istelegrafon
-            
+
           params:
             $proxy: { get_param: proxy_ip }
             $istelegrafon : { get_param: istelegrafon }
-
-
+            $bootImage: { get_param: bootImage }
 
   server_floating_ip:
     type: OS::Nova::FloatingIP
