--- a/none.yaml
+++ b/none.yaml
@@ -158,8 +158,7 @@ resources:
               apt-get install jq -y
             elif [ $bootImage = "Centos-7.5" ]
             then
-              yum install wget -y
-              wget https://dl.influxdata.com/telegraf/releases/telegraf-1.10.3-1.x86_64.rpm
+              curl -O https://dl.influxdata.com/telegraf/releases/telegraf-1.10.3-1.x86_64.rpm
               yum localinstall telegraf-1.10.3-1.x86_64.rpm -y
               yum install jq -y
             elif [ $bootImage = "RHEL-7.5" ]
