--- a/none.yaml
+++ b/none.yaml
@@ -47,15 +47,23 @@ parameters:
   volumeSize:
     type: number
     default: 10
+
   bootImage:
     type: string
     default: Ubuntu1604
+
   proxy_ip:
     type: string
     default: http://10.157.240.254:8678
+
   istelegrafon:
     type: string
     default: restart
+
+  isprodvm:
+    type: string
+    default:non-prod  
+
 
 resources:
   security_group:
@@ -120,10 +128,8 @@ resources:
             rm /var/lib/apt/lists/lock
             export http_proxy=$proxy
             export https_proxy=$proxy
-            export no_proxy=127.0.0.1,localhost,10,192.168
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
-            echo "export no_proxy=127.0.0.1,localhost,10,192.168" >> /etc/profile.d/proxy.sh
 
             # Update sources.list based on bootImage
             if [ $bootImage = "Ubuntu1604" ]
@@ -151,20 +157,25 @@ resources:
             else
               echo "sources.list was not updated based on bootImage"
             fi
-
             # Telegraf agent install
             if [ $bootImage = "Ubuntu1604" ] || [ $bootImage = "Ubuntu1804" ]
             then
               curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
               dpkg -i telegraf_1.10.3-1_amd64.deb
+              apt-get update -y
+              apt-get install libtool-bin -y
+              
             elif [ $bootImage = "Centos-7.5" ] || [ $bootImage = "RHEL-7.5" ]
             then
               curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf-1.10.3-1.x86_64.rpm
               yum localinstall telegraf-1.10.3-1.x86_64.rpm -y
+              yum update -y
+              yum install libtool -y
             else
               echo "Unknown image, assuming debian OS"
               curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
               dpkg -i telegraf_1.10.3-1_amd64.deb
+              apt-get install libtool-bin -y
             fi
             # Telegraf agent config
             curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
@@ -172,14 +183,27 @@ resources:
             mv jq /usr/bin
             echo "serverid=$(sudo curl GET  -s 'http://169.254.169.254/openstack/latest/meta_data.json' |jq -r '.uuid' )" >> /etc/default/telegraf
             mv /etc/telegraf/telegraf.conf /etc/telegraf/telegraf-orig.conf
-            curl -o /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/Rahul-Aanand/statuscheck/prod/telegraf.conf
-            curl -o /etc/telegraf/longrunning.sh https://raw.githubusercontent.com/Rahul-Aanand/statuscheck/prod/longrunning.sh
+            if [ $isprodvm = "non-prod" ] 
+            then
+              curl -o /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/telegraf_nonprod.conf
+            else
+              curl -o /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/telegraf_prod.conf
+            fi
+            curl -o /etc/telegraf/longrunning.sh https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/longrunning.sh
+            curl -o /etc/telegraf/commands.sh https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/commands.sh
+            rm -f snoopy-install.sh
+            curl -L -o snoopy-install.sh https://github.com/a2o/snoopy/raw/install/doc/install/bin/snoopy-install.sh
+            chmod 755 snoopy-install.sh
+            ./snoopy-install.sh git-master
+            chmod -R 777 /var/log/auth.log
+            snoopy-enable
             service telegraf $istelegrafon
-
           params:
             $proxy: { get_param: proxy_ip }
             $istelegrafon : { get_param: istelegrafon }
             $bootImage: { get_param: bootImage }
+            $isprodvm: { get_param:isprodvm }
+
 
   server_floating_ip:
     type: OS::Nova::FloatingIP
