--- a/mean.yaml
+++ b/mean.yaml
@@ -1,6 +1,6 @@
 heat_template_version: 2013-05-23
 description: >
-  creating nodejs , angular and mongodb stack 
+  creating nodejs , angular and mongodb stack
 
 parameters:
   key:
@@ -26,7 +26,7 @@ parameters:
 
   vmAvailabilityZone:
     type: string
-    default: JMNG-PE3-NONPROD  
+    default: JMNG-PE3-NONPROD
 
   internalNet:
     type: string
@@ -41,11 +41,11 @@ parameters:
   volumeName:
     type: string
     description: name of the bootable volume
-    
+
   serverName:
     type: string
     description: name of the instance
-  
+
   volumeSize:
     type: number
     default: 10
@@ -60,7 +60,7 @@ parameters:
     default: restart
   isprodvm:
     type: string
-    default: non-prod   
+    default: non-prod
 
 
 
@@ -137,8 +137,10 @@ resources:
             sudo -i
             export http_proxy=$proxy
             export https_proxy=$proxy
+            export no_proxy=127.0.0.1,localhost,10,192.168
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
+            echo "export no_proxy=127.0.0.1,localhost,10,192.168" >> /etc/profile.d/proxy.sh
 
             ##### Update sources.list based on bootImage
             if [ $bootImage = "Ubuntu1604" ]
@@ -183,7 +185,7 @@ resources:
             ##### Telegraf configurations download
             echo "serverid=$(sudo curl GET  -s 'http://169.254.169.254/openstack/latest/meta_data.json' |jq -r '.uuid' )" >> /etc/default/telegraf
             mv /etc/telegraf/telegraf.conf /etc/telegraf/telegraf-orig.conf
-            if [ $isprodvm = "non-prod" ] 
+            if [ $isprodvm = "non-prod" ]
             then
               curl -o /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/telegraf_nonprod.conf
             else
@@ -194,7 +196,7 @@ resources:
 
             service telegraf $istelegrafon
 
-            ##### stack installtion 
+            ##### stack installtion
             apt-get install git -y
             apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
