--- a/none.yaml
+++ b/none.yaml
@@ -62,7 +62,7 @@ parameters:
 
   isprodvm:
     type: string
-    default: non-prod  
+    default: non-prod
 
 
 resources:
@@ -128,8 +128,10 @@ resources:
             rm /var/lib/apt/lists/lock
             export http_proxy=$proxy
             export https_proxy=$proxy
+            export no_proxy=127.0.0.1,localhost,10,192.168
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
+            echo "export no_proxy=127.0.0.1,localhost,10,192.168" >> /etc/profile.d/proxy.sh
 
             # Update sources.list based on bootImage
             if [ $bootImage = "Ubuntu1604" ]
@@ -164,7 +166,7 @@ resources:
               dpkg -i telegraf_1.10.3-1_amd64.deb
               apt-get update -y
               apt-get install libtool-bin -y
-              
+
             elif [ $bootImage = "Centos-7.5" ] || [ $bootImage = "RHEL-7.5" ]
             then
               curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf-1.10.3-1.x86_64.rpm
@@ -183,7 +185,7 @@ resources:
             mv jq /usr/bin
             echo "serverid=$(sudo curl GET  -s 'http://169.254.169.254/openstack/latest/meta_data.json' |jq -r '.uuid' )" >> /etc/default/telegraf
             mv /etc/telegraf/telegraf.conf /etc/telegraf/telegraf-orig.conf
-            if [ $isprodvm = "non-prod" ] 
+            if [ $isprodvm = "non-prod" ]
             then
               curl -o /etc/telegraf/telegraf.conf https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/telegraf_nonprod.conf
             else
