--- a/none.yaml
+++ b/none.yaml
@@ -64,6 +64,10 @@ parameters:
     type: string
     default: non-prod
 
+  commandLog :
+    type : boolean  
+    default: false
+
 
 resources:
   security_group:
@@ -159,7 +163,7 @@ resources:
             else
               echo "sources.list was not updated based on bootImage"
             fi
-            # Telegraf agent install
+            ################ Telegraf agent install
             if [ $bootImage = "Ubuntu1604" ] || [ $bootImage = "Ubuntu1804" ]
             then
               curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
@@ -179,7 +183,20 @@ resources:
               dpkg -i telegraf_1.10.3-1_amd64.deb
               apt-get install libtool-bin -y
             fi
-            # Telegraf agent config
+
+            ################snoopy install 
+            if [$commandLog == true]
+            then
+              rm -f snoopy-install.sh
+              curl -L -o snoopy-install.sh https://github.com/a2o/snoopy/raw/install/doc/install/bin/snoopy-install.sh
+              chmod 755 snoopy-install.sh
+              ./snoopy-install.sh git-master
+              chmod -R 755 /var/log/auth.log
+              snoopy-enable
+            else
+            fi
+
+            ################# Telegraf agent config
             curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
             chmod +x ./jq
             mv jq /usr/bin
@@ -193,18 +210,14 @@ resources:
             fi
             curl -o /etc/telegraf/longrunning.sh https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/longrunning.sh
             curl -o /etc/telegraf/commands.sh https://raw.githubusercontent.com/mayankkapoor/statuscheck/test/commands.sh
-            rm -f snoopy-install.sh
-            curl -L -o snoopy-install.sh https://github.com/a2o/snoopy/raw/install/doc/install/bin/snoopy-install.sh
-            chmod 755 snoopy-install.sh
-            ./snoopy-install.sh git-master
-            chmod -R 755 /var/log/auth.log
-            snoopy-enable
+            
             service telegraf $istelegrafon
           params:
             $proxy: { get_param: proxy_ip }
             $istelegrafon : { get_param: istelegrafon }
             $bootImage: { get_param: bootImage }
             $isprodvm: { get_param: isprodvm }
+            $commandLog : { get_param: commandLog }
 
 
   server_floating_ip:
