--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -168,7 +168,7 @@ resources:
             apt-get install jq -y
             
             ################snoopy install 
-            if [$commandLog = true]
+            if $commandLog 
             then
               rm -f snoopy-install.sh
               curl -L -o snoopy-install.sh https://github.com/a2o/snoopy/raw/install/doc/install/bin/snoopy-install.sh
