Update templates to only append serverName to hosts file
Now we only append the serverName to hosts file in order to resolve some
integration issues with Cinder

--- a/mean.yaml
+++ b/mean.yaml
@@ -62,8 +62,8 @@ parameters:
     type: string
     default: non-prod
   commandLog:
-    type: boolean  
-    default: false 
+    type: boolean
+    default: false
 
 
 
@@ -135,9 +135,8 @@ resources:
         str_replace:
           template: |
             #!/bin/bash -v
-            sudo hostname localhost
-            echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
             sudo -i
+            echo "127.0.1.1 $serverName" >> /etc/hosts
             rm -rf /var/lib/apt/lists/lock
             export http_proxy=$proxy
             export https_proxy=$proxy
@@ -179,8 +178,8 @@ resources:
             apt-get update -y
             apt-get install libtool-bin -y
             apt-get install jq -y
-            
-            ################snoopy install 
+
+            ################snoopy install
             if [ $commandLog = True ]
             then
               rm -f snoopy-install.sh
@@ -229,6 +228,7 @@ resources:
             $bootImage: { get_param: bootImage }
             $isprodvm: { get_param: isprodvm }
             $commandLog : { get_param: commandLog }
+            $serverName: { get_param: serverName }
 
 
 
